# finalproject_galimova_25555

./: .gitignore  README.md  demo.cast  pyproject.toml
data/: exchange_rates.json  portfolios.json  rates.json  users.json
src/valutatrade_hub/: decorators.py  logging_config.py
src/valutatrade_hub/cli/: interface.py
src/valutatrade_hub/core/: constants.py  currencies.py  exceptions.py  models.py  usecases.py  utils.py
src/valutatrade_hub/infra/: database.py  settings.py
src/valutatrade_hub/parser_service/: api_clients.py  config.py  storage.py  updater.py
